testcases/negative/missing-doctype.otk
OFFICETALK/1.0

AT body/paragraph[1]
SET "Hello"
